fix: remove letter spacing

--- a/css/foundation/layout.styl
+++ b/css/foundation/layout.styl
@@ -14,7 +14,6 @@
 body
 	background-color: white
 	color: black
-	letter-spacing: -0.03em
 
 .wrapper
 	width: 100%
